# morel-rust

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  DOCUMENTATION_STYLE.md  HISTORY.md  NOTICE  README  README.md  agents.md  build.rs
.github/workflows/: rust.yml
docs/: datalog.md  howto.md  reference.md
etc/: check-convergence.py  enable_queries.py
lib/: relational.sig  sys.sig  word.sig
src/: lib.rs  main.rs  parser.rs  wasm.rs
src/compile/: compiler.rs  core.rs  expander.rs  fbbt.rs  free_finder.rs  from_builder.rs  generator.rs  generators.rs  inliner.rs  library.rs  lindig.rs  mod.rs  pat_coverage.rs  postfix.rs  pretty.rs  progressive_widen.rs  replacer.rs  resolver.rs  sat.rs  signature_validator.rs  span.rs  tabular.rs  type_env.rs  type_parser.rs  type_resolver.rs  types.rs  unifier.rs  var_collector.rs
src/datalog/: analyzer.rs  ast.rs  error.rs  executor.rs  grammar.lalrpop  mod.rs  parser.rs  translator.rs
src/eval/: bool.rs  bound.rs  char.rs  code.rs  color_scheme.rs  comparator.rs  date.rs  discrete.rs  either.rs  file.rs  frame.rs  int.rs  link_table.rs  list.rs  list_pair.rs  math.rs  mod.rs  option.rs  order.rs  real.rs  relational.rs  row_sink.rs  session.rs  string.rs  time.rs  val.rs  variant.rs  vector.rs  word.rs
src/parser/: ast.rs  csv.pest  generated.rs  mod.rs  morel.pest  parser.rs
src/shell/: config.rs  error.rs  highlight.rs  kernel.rs  main.rs  mod.rs  output_matcher.rs  prop.rs  runner.rs  script_test.rs  statement.rs  terminal.rs
src/syntax/: ast.rs  ast_dumper.rs  mod.rs  morel.pest  parser.rs
src/unify/: mod.rs  unifier.pest  unifier.rs  unifier_parser.rs
tests/: cli.rs  lint.rs  smile.rs  unparse.rs
tests/bench/: bench-relational.smli
tests/script/: attribute.smli  bag.smli  blog.smli  built-in.smli  builtIn.smli  (+33 more)
web/: README.md  demo.html
(+19 files in other folders)
